[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bacdiving"
version = "1.2.7"
authors = [
  { name="Mahima Arunkumar", email="M.Arunkumar@campus.lmu.de" },
]
keywords = ["BacDive", "bacteria", "phenotype information"]
description = "Bacdiving accesses the Bacterial Diversity Metadatabase BacDive and provides various visualization options."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'alive_progress>=2.4.1',
  'anytree>=2.8.0',
  'bacdive>=0.2',
  'bokeh>=2.4.3',
  'ete3>=3.1.2',
  'matplotlib==3.6.0',
  'numpy>=1.23.0',
  'pandas>=1.5.0',
  'seaborn',
  'setuptools>=65.5.0',
  'scikit-learn',
  'scipy>=1.9.2',
  'toyplot>=1.0.3',
  'toytree>=2.0.1',
  'wheel>=0.34.1',
  'worldmap>=0.1.6',
]

[project.urls]
"BacDive Homepage" = "https://bacdive.dsmz.de/"
"Documentation" = "https://bacdiving.readthedocs.io/en/latest/"
"Github" = "https://github.com/mBiocoder/Bacdiving"
